# aiagenti

./: .env.example  .gitignore  CodexContext.md  GSTACK_REVIEW.md  README.md  SETUP.md  STO_DOBIVAS_U_AI_VALIDATORU.md  SYNTHETIC_AUDIENCE_UPGRADE.md  TAURI_MIGRATION.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/advisors/: page.tsx
app/discovery/: page.tsx
app/market/: page.tsx
app/plan/: page.tsx
app/projects/: page.tsx
app/results/: page.tsx
app/settings/: page.tsx
components/: AccountModeNotice.tsx  AreaMapPicker.tsx  AudiencePicker.tsx  AuthForm.tsx  Boardroom.tsx  Dashboard.tsx  FinancialCard.tsx  IdeaForm.tsx  KnowledgePanel.tsx  LoadingScreen.tsx  LocalProfileBadge.tsx  ObsidianSync.tsx  OnboardingChat.tsx  PanelChat.tsx  ReadinessMeter.tsx  SetupStatus.tsx  TokenWallet.tsx
context/: AuthContext.tsx
lib/: agents.ts  ai-client.ts  clustering.ts  conjoint.ts  deepseek.ts  desktop-wallet.ts  discovery.ts  engine.ts  env.ts  knowledge.ts  market-digest.ts  obsidian-fs.ts  obsidian-notes.ts  persona-context.ts  personas.ts  price-crossover.ts  pricing.ts  projects.ts  readiness.ts  related.ts  tauri.ts  tavily.ts  token-messages.ts  tokens.ts  types.ts  unit-economics.ts  user-settings.ts
lib/server/: actions.ts  advisor-tools.ts  angles.ts  api-guard.ts  audiences.ts  chat.ts  conjoint.ts  conversion.ts  debate.ts  desktop-billing.ts  discovery.ts  errors.ts  idea-brief.ts  intake.ts  interview.ts  market.ts  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+25 files in other folders)
