[package]
name = "aivalidator"
version = "0.1.0"
description = "AI Validator desktop app"
authors = ["AI Validator"]
edition = "2021"

[lib]
name = "aivalidator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }
